lab1/Test/L1-A-8-71.cmm
int NhWPqFeKofnx ( struct LWQWc {
  struct eOCd62v83CaL rPJfe0yuaxox ;
  int HgB78REemL ;
  struct {
  }XUF2yICDQ4hboWR1LlN2 - ;
  int YD0sUxrL_ ;
  int lltX2DJ8CBaZW , oc9Y = zv6gKa ;
}F2L3oeDPVQ1mbK6 float , float JXp ) {
  if ( VwTW )   while ( Mlgrd9 )   VyWR4nWY ;

else   if ( uBAbQ5n4fZtUe )   return or8LNxCZ5Ji_vI50U 
    = Ae4LiyXkwEiL || qjJHhWYJi7h8TDrdXnR < S / - ! m8iEHUz0fP 
    ( lZVhR_ && fj9PXnwO6YIhw - LgttWpKWCwE4Mj [ RRCEdYgMN1 
    = xpbVrAqXe == dngMmQgxEeyH + ! lbZjcuIlRivQcSj [ 
    U8MEBMaMYNWZzQH66JF && Hzj_8piOOiqXWu <= hM + rtPs4iS_F96 
    / X [ F8R4qR5nCBcxwDB9WfvS = fWG055DdPuR && qQPZWF2buB75O 
    != Bvt - IjJqDcUwqU6xZvuj2O / ! CBbjZS3ggAZ3N4QK [ 
    ja9yRXuzHV_ohX7ZDeRf > EmbS1kA6Xzo9 ( KpNf8lq0l4pOLN378JVe 
    , Vlxrv_6sIO8Wvma7 = F9xg0SdW1 > - - ! - ( kmnCiWQ5YtplEQ548X 
    ) >= 1474205690.1673309338 ) / dwkM6Rgc2cBmf8LIlE 
    ] ] ] / ! zdfExw0YSVhY93C ( ) . WPz_uAlk9Z3Vu ] * 
    ! 1672905631 <= ) ;


}
struct AeAN7 XjCHqihwbm8jZ0b , A2F5nLX5kLRM [ 2027679123 
  ] 

;
int ;
int ;
int Y09YCN1DFfIW7vL ( ) {
  OjytyEpof ;
  DAipXBmvDCel4 ;
  if ( AKvPrwasWh3KkN_x )   u2Z ;
else   MsILio ;

{
  }}
